# TradeEngine

./: .gitignore  OPTIONS_EXTENSION.md  README.md  example_usage.py  pyproject.toml
tests/: __init__.py  test_brokers.py  test_execution.py  test_kill_switch.py  test_option_execution.py  test_option_orders.py  test_risk_checks.py  test_signal_contract.py
trade_engine/: __init__.py  main.py
trade_engine/api/: __init__.py  health.py  kill_switch.py  signal_ingest.py
trade_engine/audit/: __init__.py  decision_log.py  trade_log.py
trade_engine/brokers/: __init__.py  base.py  ibkr_stub.py  paper.py
trade_engine/config/: __init__.py  limits.py  signal_contract.py
trade_engine/execution/: __init__.py  fills.py  option_fills.py  option_orders.py  option_router.py  option_validation.py  order_router.py  order_state.py
trade_engine/portfolio/: __init__.py  client.py
trade_engine/risk/: __init__.py  exposure.py  loss_limits.py  pre_trade.py  throttles.py
